--- a/.env.exemple
+++ b/.env.exemple
@@ -1,1 +1,9 @@
 PORT= :PORT #exemple> :3000
+
+
+POSTGRES_USER=
+POSTGRES_PASSWORD=
+POSTGRES_DB=
+
+CONNECT_STRING=postgresql://<user>:<password>@<host>:<port>/<database_name>?sslmode=disable #connection string
+
