--- a/.env.exemple
+++ b/.env.exemple
@@ -7,3 +7,4 @@ POSTGRES_DB=
 
 CONNECT_STRING=postgresql://<user>:<password>@<host>:<port>/<database_name>?sslmode=disable #connection string
 
+JWT_SECRET_KEY=
